--- a/white.html
+++ b/white.html
@@ -83,7 +83,7 @@
         </div>
     </section>
     <!-- posts -->
-    <section class="px-4 py-3 mt-5 text-white">
+    <section class="px-4 py-3 mt-5 text-black">
       <!-- post1 -->
       <div>
         <!-- post header -->
@@ -138,7 +138,88 @@
         <a href="#" class="font-medium hover:text-gray-500">Vijay</a>
         <p>Leo update  &#128293; - Best Action Movie</p>
        </div>
+       <div class="mt-1">
+        <span class="text-gray-500">View all 400 comments</span>
+       </div>
+       <div class="py-2 flex items-center space-x-2 text-gray-500">
+        <img src="https://ui-avatars.com/api/?name=Vignesh&background=random&color=fff"
+        alt="Vignesh" class="rounded-full w-9 ">
+      <span>Add a comment...</span>
+      </div>
+      </div>
+      <!-- post2 -->
+      <div class="mt-5">
+        <!-- post header -->
+        <div class="flex items-center justify-between">
+        <div class="flex items-center space-x-2">
+            <img src="https://ui-avatars.com/api/?name=LokeshKanagaraj&background=random&color=fff"
+            alt="LokeshKanagaraj" class="rounded-full w-12 p-0.5 bg-gradient-to-tr from-[#feda75] via-[#fa7e1e] via-[#d62976] to-[#962fbf]">
+                    <h4 class=" font-semibold pl-2">Lokesh Kanagaraj</h4>
+                    <svg
+                    aria-label="Verified"
+                    class="x1lliihq x1n2onr6"
+                    color="rgb(0, 149, 246)"
+                    fill="rgb(0, 149, 246)"
+                    height="12"
+                    role="img"
+                    viewBox="0 0 40 40"
+                    width="12"
+                  >
+                  <title>Verified</title>
+                    <path
+                      d="M19.998 3.094 14.638 0l-2.972 5.15H5.432v6.354L0 14.64 3.094 20 0 25.359l5.432 3.137v5.905h5.975L14.638 40l5.36-3.094L25.358 40l3.232-5.6h6.162v-6.01L40 25.359 36.905 20 40 14.641l-5.248-3.03v-6.46h-6.419L25.358 0l-5.36 3.094Zm7.415 11.225 2.254 2.287-11.43 11.5-6.835-6.93 2.244-2.258 4.587 4.581 9.18-9.18Z"
+                      fill-rule="evenodd"
+                    ></path>
+                  </svg>
+                    <span class="text-gray-500 text-3xl">&middot;</span>
+                    <span class="text-gray-500 text-sm">5 m</span>
+        </div>
+          <div>
+            <a href="#">
+              <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" viewBox="0 0 256 256" class="fill-gray-500 hover:fill-white"><path d="M156 128a28 28 0 1 1-28-28a28 28 0 0 1 28 28M48 100a28 28 0 1 0 28 28a28 28 0 0 0-28-28m160 0a28 28 0 1 0 28 28a28 28 0 0 0-28-28"/></svg>
+            </a>
+          </div>
+        </div>
+       <!-- post -->
+       <div class="py-3">
+        <img src="https://pbs.twimg.com/media/FnuIYF6aYAAhppj?format=jpg&name=large"  alt="leo" class="rounded">
+       </div>
+       <!-- likes -->
+       <div class="flex justify-between items-center">
+        <div class="flex items-center space-x-3">
+          <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 24 24" class="fill-red-500"><path d="m12 21.35l-1.45-1.32C5.4 15.36 2 12.27 2 8.5C2 5.41 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.08C13.09 3.81 14.76 3 16.5 3C19.58 3 22 5.41 22 8.5c0 3.77-3.4 6.86-8.55 11.53z"/></svg>
+          <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 24 24" class="fill-white"><path fill="currentColor" d="M12 3C6.5 3 2 6.58 2 11a7.218 7.218 0 0 0 2.75 5.5c0 .6-.42 2.17-2.75 4.5c2.37-.11 4.64-1 6.47-2.5c1.14.33 2.34.5 3.53.5c5.5 0 10-3.58 10-8s-4.5-8-10-8m0 14c-4.42 0-8-2.69-8-6s3.58-6 8-6s8 2.69 8 6s-3.58 6-8 6"/></svg>
+          <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 24 24"><path fill="currentColor" d="M20.33 3.67a1.45 1.45 0 0 0-1.47-.35L4.23 8.2A1.44 1.44 0 0 0 4 10.85l6.07 3l3 6.09a1.44 1.44 0 0 0 1.29.79h.1a1.43 1.43 0 0 0 1.26-1l4.95-14.59a1.41 1.41 0 0 0-.34-1.47M4.85 9.58l12.77-4.26l-7.09 7.09Zm9.58 9.57l-2.84-5.68l7.09-7.09Z"/></svg>        </div>
+        <div>
+          <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 256 256"><path fill="currentColor" d="M184 32H72a16 16 0 0 0-16 16v176a8 8 0 0 0 12.24 6.78L128 193.43l59.77 37.35A8 8 0 0 0 200 224V48a16 16 0 0 0-16-16m0 177.57l-51.77-32.35a8 8 0 0 0-8.48 0L72 209.57V48h112Z"/></svg>
+        </div>
+       </div>
+       <!-- views -->
+       <div class="font-semibold my-2">546,397 views</div>
+       <!-- content -->
+       <div class="flex space-x-2 items-center">
+        <a href="#" class="font-medium hover:text-gray-500">LokeshKanagaraj</a>
+        <p>Thank you na for LEO  &#128293;</p>
+       </div>
+       <div class="mt-1">
+        <span class="text-gray-500">View all 100 comments</span>
+       </div>
+       <div class="py-2 flex items-center space-x-2 text-gray-500">
+        <img src="https://ui-avatars.com/api/?name=Vignesh&background=random&color=fff"
+        alt="Vignesh" class="rounded-full w-9">
+      <span>Add a comment...</span>
+      </div>
       </div>
     </section>
+    <footer class="mt-1 pl-3 pb-2">
+      <div class="flex justify-around">
+        <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 256 256" class="fill-black hover:fill-purple-700 cursor-pointer"><path  d="M224 115.55V208a16 16 0 0 1-16 16h-40a16 16 0 0 1-16-16v-40a8 8 0 0 0-8-8h-32a8 8 0 0 0-8 8v40a16 16 0 0 1-16 16H48a16 16 0 0 1-16-16v-92.45a16 16 0 0 1 5.17-11.78l80-75.48l.11-.11a16 16 0 0 1 21.53 0a1.14 1.14 0 0 0 .11.11l80 75.48a16 16 0 0 1 5.08 11.78"/></svg>
+        <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" class="text-black fill-white hover:text-purple-700 cursor-pointer"><path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m21 21l-4.343-4.343m0 0A8 8 0 1 0 5.343 5.343a8 8 0 0 0 11.314 11.314"/></svg>
+        <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" class="fill-black hover:fill-purple-700 cursor-pointer"><path  d="M11.5 16.5h1v-4h4v-1h-4v-4h-1v4h-4v1h4zM5.615 20q-.69 0-1.152-.462Q4 19.075 4 18.385V5.615q0-.69.463-1.152Q4.925 4 5.615 4h12.77q.69 0 1.152.463q.463.462.463 1.152v12.77q0 .69-.462 1.152q-.463.463-1.153.463zm0-1h12.77q.23 0 .423-.192q.192-.193.192-.423V5.615q0-.23-.192-.423Q18.615 5 18.385 5H5.615q-.23 0-.423.192Q5 5.385 5 5.615v12.77q0 .23.192.423q.193.192.423.192M5 5v14z"/></svg>
+        <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 48 48" class="fill-white hover:text-purple-700 cursor-pointer" ><g stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="4"><path d="M39 6H9a3 3 0 0 0-3 3v30a3 3 0 0 0 3 3h30a3 3 0 0 0 3-3V9a3 3 0 0 0-3-3"/><path d="M20.5 28v-6.062l5.25 3.03L31 28l-5.25 3.031l-5.25 3.031zM6 15h36m-9-9l-6 9m-6-9l-6 9"/></g></svg>
+        <img src="https://ui-avatars.com/api/?name=Vignesh&background=random&color=fff"
+        alt="Vignesh" class="rounded-full w-7 h-7 cursor-pointer">
+      </div>
+    </footer>
   </body>
 </html>
