--- a/white.html
+++ b/white.html
@@ -149,7 +149,7 @@
        <div class="py-2 flex items-center space-x-2 text-gray-500">
         <img src="https://ui-avatars.com/api/?name=Vignesh&background=random&color=fff"
         alt="Vignesh" class="rounded-full w-9 ">
-      <span>Add a comment...</span>
+        <input type="text" class="bg-white text-gray-600 outline-none" placeholder="Add a comment...">
       </div>
       </div>
       <!-- post2 -->
@@ -212,7 +212,7 @@
        <div class="py-2 flex items-center space-x-2 text-gray-500">
         <img src="https://ui-avatars.com/api/?name=Vignesh&background=random&color=fff"
         alt="Vignesh" class="rounded-full w-9">
-      <span>Add a comment...</span>
+        <input type="text" class="bg-white text-gray-600 outline-none" placeholder="Add a comment...">
       </div>
       </div>
     </section>
