--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Instagram UI</title>
     <link rel="stylesheet" href="./public/css/main.css">
   </head>
-  <body class="bg-gradient-to-r from-[#feda75]  via-[#d62976] via-red-600 to-[#962fbf] max-w-lg mx-auto">
+  <body class="bg-gradient-to-r from-[#feda75]  via-[#d62976] via-red-600 to-[#962fbf] max-w-md mx-auto">
     <div class="bg-gray-950">
       <div class="text-white flex justify-center items-center space-x-2"><span>Instagram UI Challenge</span>
         <a href="https://github.com/san1234100/Instagram-ui-tailwind" class="hover:text-gray-400">
